--- a/ASSIGNMENT 3/contact.html
+++ b/ASSIGNMENT 3/contact.html
@@ -7,6 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css">
     <script src="main.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=ZCOOL+QingKe+HuangYou" rel="stylesheet">
+<style>
+body {
+  font-family: 'ZCOOL QingKe HuangYou';
+  font-size: 28px;
+}
+</style>
 </head>
  <body>
      
@@ -21,13 +28,16 @@
                     <li>
                         <a href="contact.html">Contact</a>
                     </li>
+                    <li>
+                        <a href="about.html">About</a>
+                    </li>
                 </ul>
 </nav>
-    <main class="container">
-        <h1>Hello</h1>
+    <main class="container2">
+        <h1>Become an Astronaut</h1>
 
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            We choose to go to the moon in this decade and do the other things, not because they are easy, but because they are hard, because that goal will serve to organize and measure the best of our energies and skills, because that challenge is one that we are willing to accept, one we are unwilling to postpone, and one which we intend to win.
         </p>
     </main>
 
